[package]
name = "slava"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"
crossbeam = "0.8"
tokio = { version="1", features=["rt", "rt-multi-thread", "sync", "macros", "io-util"] }

[[bin]]
name = "tcp_server"
path = "bin/tcp_server.rs"

[[bin]]
name = "tcp_server_tokio_ioutil"
path = "bin/tcp_server_tokio_ioutil.rs"

[[bin]]
name = "tcp_server_tokio_rt"
path = "bin/tcp_server_tokio_rt.rs"
